scrollbar fix

--- a/css/site.css
+++ b/css/site.css
@@ -46,7 +46,7 @@
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.15);
   position: fixed;
   height: 5vw;
-  width: 70vw;
+  width: 97vw;
   left: 35vw;
   top: 0;
   display: flex;
@@ -94,7 +94,7 @@
   z-index: 2;
 }
 
-.section-top .splash {
+.section.top .splash {
   position: absolute;
   top: 5vw;
   right: 5vw;
@@ -102,10 +102,10 @@
   bottom: 5vw;
   background: url(/splash_1.jpg) no-repeat center center;
   background-size: cover;
-}
+} */
 
 .header {
-  position: absolute;
+  position: relative;
   left: 50px;
   top: 50vh;
   color: #4d4d4f;
@@ -113,7 +113,7 @@
   font-family: 'Ailerons', sans-serif;
   text-transform: uppercase;
   transform: translateY(-50%);
-}
+} 
 
 .portfolio-button {
   background: #ffffff;
@@ -144,4 +144,12 @@
   position: absolute;
   right: 5px;
   top: 8px;
+}
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0px;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
 }
